--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -3,8 +3,8 @@ table {
   border-radius: 15px;
   width: 100%;
   text-align: center;
-  display: inline-table;
-  flex-direction: column;
+  /* display: inline-flex;
+  flex-direction: column; */
 }
 td,
 th {
