--- a/src/components/FriendsList/FriendsList.module.css
+++ b/src/components/FriendsList/FriendsList.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   margin: 10px 0;
   padding: 10px;
   border-radius: 10px;
